--- a/_posts/2019-09-25-شاغل-یا-بیکار.md
+++ b/_posts/2019-09-25-شاغل-یا-بیکار.md
@@ -8,6 +8,9 @@ tags:
 - درباره-زمان
 - Morteza-Asadi
 ---
+من تجربه‌ی هر دو مورد را داشته‌ام، هم موقعی که بیکار باشی وقتت کاملا آزاد باشد؛ هم موقعی که کلا شاغل باشی و وقت آزادی در روز برایت نماند!
+
+
 
 مدتی در دوران دانشگاه، کار فریلنس نمی‌کردم، آن دوران وقت آزاد زیادی داشتم و آن موقع به نظرم داشتم وقتم را به بطالت می‌گذراندم. اما این وقت آزاد خوبی‌هایی داشت که هنوزم بعد از چند سال از مواهب آن بهره‌مند هستم، نمونه‌اش یادگیری چیزهای جدید در رشته و فیلد کاری‌ام. یک نمونه دیگرش هم فرصت داشتن برای عمیق شدن در هر چیزی که می‌خواستی بود، فرصت تفکرِ عمیق!
 
