--- a/_posts/2016-01-11-نقدی-بر-جای-خالی-سلوچ-نوشته-محمود-دولت-آ.md
+++ b/_posts/2016-01-11-نقدی-بر-جای-خالی-سلوچ-نوشته-محمود-دولت-آ.md
@@ -18,7 +18,7 @@ redirect_from:
 
 ابتدا پیش از هر چیز بهتر است خلاصه کتاب را به زبان من بخوانید:  
 
-> داستان در روستایی تقریبا بیابانی به نام زمیج در حوالی گرگان روی می‌دهد و قصه از آنجایی شروع می‌شود که سلوچ (پدر خانواده) یک روز صبح زود از خانه رفته و دیگر برنمی‌گردد. همسر او، مرگان نیز هر چه به دنبال شوهرش جستجو می‌کند نشانی از او نمی‌یابد؛ شخصیت محوری داستان نیز همین مرگان است. سلوچ سه فرزند به نام‌های عباس، ابراو و هاجر دارد؛ عباس از بقیه بچه‌ها بزرگتر است و پس از او ابراو و درنهایت دختر آن‌ها هاجر، از همه کوچکتر است. شغل سلوچ مغنی‌گری، گچ‌کاری و تنورسازی است که هیچکدام ار آنها دلخواه پسر بزرگ او، عباس نیست و او علاقه‌ای زیادی به قماربازی دارد. پسر کوچکتر (ابراو) کاری‌تر است و نسبت به بقیه دلبستگی زیادتری به پدر دارد. مرگان در نبود سلوچ، سعی بر مدیریت خانواده دارد و سعی می‌کند در نبود همسر با فرستادن پسرانش به کارهایی مانند جمع‌آوری هیزم و فروش آن، برای خانواده نان و غذا تهیه کند. خود مرگان، زنی سخت‌کوش است و یک لحظه از پای نمی‌نشیند و با انجام کارهای مختلف و حتی پیشه‌ی سلوچ مانند گچ‌کاری سعی در کسب درآمد و مقابله با فقر دارد.
+> داستان در روستایی تقریبا بیابانی به نام زمیج روی می‌دهد و قصه از آنجایی شروع می‌شود که سلوچ (پدر خانواده) یک روز صبح زود از خانه رفته و دیگر برنمی‌گردد. همسر او، مرگان نیز هر چه به دنبال شوهرش جستجو می‌کند نشانی از او نمی‌یابد؛ شخصیت محوری داستان نیز همین مرگان است. سلوچ سه فرزند به نام‌های عباس، ابراو و هاجر دارد؛ عباس از بقیه بچه‌ها بزرگتر است و پس از او ابراو و درنهایت دختر آن‌ها هاجر، از همه کوچکتر است. شغل سلوچ مغنی‌گری، گچ‌کاری و تنورسازی است که هیچکدام ار آنها دلخواه پسر بزرگ او، عباس نیست و او علاقه‌ای زیادی به قماربازی دارد. پسر کوچکتر (ابراو) کاری‌تر است و نسبت به بقیه دلبستگی زیادتری به پدر دارد. مرگان در نبود سلوچ، سعی بر مدیریت خانواده دارد و سعی می‌کند در نبود همسر با فرستادن پسرانش به کارهایی مانند جمع‌آوری هیزم و فروش آن، برای خانواده نان و غذا تهیه کند. خود مرگان، زنی سخت‌کوش است و یک لحظه از پای نمی‌نشیند و با انجام کارهای مختلف و حتی پیشه‌ی سلوچ مانند گچ‌کاری سعی در کسب درآمد و مقابله با فقر دارد.
 > 
 > یکی از همسایگان مرگان، علی گناو نام دارد؛ حمامی روستا. علی گناو با زن و مادرش زندگی می‌کند و به خاطر حرف‌های زنش، مادرش را از خانه بیرون کرده و ساکن یک خرابه می‌کند که همین کار باعث مرگ مادرش در زمستان می‌شود. پس از مرگ مادر، علی گناو که مرگ او را از چشم زنش می‌بیند، زنش را تا سر مرگ کتک می‌زند و باعث علیل شدن او می‌شود. نازایی زن از یک سو و علیل شدنش از سوی دیگر باعث می‌شود که علی گناو به فکر یک زن جدید بیفتد. در مراسم خاکسپاری مادش علی گناو به مرگان پیشنها می‌دهد که دخترش یعنی هاجر (که هنوز دختری کم سن و سال است) را به عقد او (که فردی میانسال است) درآورد، مرگان ابتدا قبول نمی‌کند؛ ولی با اصرار علی گناو و وعده‌هایی مانند اینکه خانواده مرگان به بزرگتر و حامی نیاز دارد، فراهم کردن کار برای پسران مرگان و... او را راضی می‌کند. علی گناو ابراو را در حمام مشغول می‌کند و عباس را هم به شتربانی برای پسرعمویش \-سردار\- می‌گمارد.
 >
