--- a/_posts/2020-03-20-اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی.md
+++ b/_posts/2020-03-20-اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی.md
@@ -20,8 +20,10 @@ tags:
 برای اضافه کردن تقویم شمسی به تقویم گوگل مراحل زیر را دنبال کنید:
 - از آنجایی که این تقویم را در سه نسخه تهیه کرده‌ام؛ ابتدا بر روی هر کدام از نسخه‌ها که فکر می‌کنید برای شما مناسب است کلیک کنید:
 
-**[تقویم هجری شمسی سال 1399 برای Google Calendar](https://calendar.google.com/calendar/embed?src=2fbipn4ked5p9h7jrjpjjj8qn4%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**
+**[تقویم کامل سال ۱۳۹۹ (شامل روز هفته، روز، ماه و سال)](https://calendar.google.com/calendar/embed?src=2fbipn4ked5p9h7jrjpjjj8qn4%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**
+
 **[تقویم کوتاه سال ١٣٩٩ (روز و ماه)](https://calendar.google.com/calendar/embed?src=aetlrnvpf6tk2dhc7ijk50p8r8%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**
+
 **[ تقویم کوتاه سال ١٣٩٩ (روز) ](https://calendar.google.com/calendar/embed?src=rp8lfm47korun21j0stor4ckfk%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**
 
 - حال تقویم شمسی باید همانند یکی از تصاویر زیر برای شما نمایش داده شود:
