--- a/_posts/2020-03-31-نقد-فیلم-پلتفرم.md
+++ b/_posts/2020-03-31-نقد-فیلم-پلتفرم.md
@@ -11,7 +11,7 @@ tags:
 - نقد-فیلم
 - Morteza-Asadi
 ---
-فیلم «پلتقرم» با کارگردانی گالدر گازتلو-اوروتیا محصول سال ۲۰۱۹ اسپانیاست. من این فیلم را به پیشنهاد یکی از دوستان توییتری دیدم؛ در حقیقت با یک فیلم خوب و داستانی منسجم طرفیم، فیلمی در ژانر ترسناک، علمی تخیلی و دلهره آور که از یک طرف نمادین است و از یک طرف روزگار ما را توصیف می‌کند! من زیاد اهل فیلم دیدن و نقد نوشتن نیستم، اما این فیلم به قدری خوب بود که فکر می‌کنم حیف است در موردش ننویسم. فیلمی که بعد از دیدنش شما را به فکر فرو خواهد برد. اجازه بدهید که ابتدا خلاصه داستان فیلم را از زبان من بخوانید: 
+فیلم «پلتفرم» با کارگردانی گالدر گازتلو-اوروتیا محصول سال ۲۰۱۹ اسپانیاست. من این فیلم را به پیشنهاد یکی از دوستان توییتری دیدم؛ در حقیقت با یک فیلم خوب و داستانی منسجم طرفیم، فیلمی در ژانر ترسناک، علمی تخیلی و دلهره آور که از یک طرف نمادین است و از یک طرف روزگار ما را توصیف می‌کند! من زیاد اهل فیلم دیدن و نقد نوشتن نیستم، اما این فیلم به قدری خوب بود که فکر می‌کنم حیف است در موردش ننویسم. فیلمی که بعد از دیدنش شما را به فکر فرو خواهد برد. اجازه بدهید که ابتدا خلاصه داستان فیلم را از زبان من بخوانید: 
 
 **خلاصه‌ی فیلم پلتفرم 2019**
 
