--- a/_posts/2020-08-06-مینیمالیسم-دیجیتال.md
+++ b/_posts/2020-08-06-مینیمالیسم-دیجیتال.md
@@ -25,7 +25,7 @@ tags:
 {:refdef}
 
 
-در کتاب مینیمالیسم دیجیتال، قاعده‌ی کلی تجاری برای شرکتهایی مثل فیسبوک با این عبارت کوتاه بیان می‌کند: *توجه ما = پول آن‌ها*؛ یعنی هر چقدر ما زمان و توجه بیشتری برای این نرم‌افزارها صرف کنیم، سودآوری این شرکت‌ها (که بر پایه‌ی تبلیغات هستند) بیشتر خواهد شد؛ به عبارت دیگر، میلیاردها دلار سرمایه‌گذاری شده تا آدم‌ها به دام فضای مجازی بیافتند و راه گریزی از آن نداشته باشند.
+در کتاب مینیمالیسم دیجیتال، قاعده‌ی کلی تجاری برای شرکتهایی مثل فیسبوک با این عبارت کوتاه بیان می‌کند: **توجه ما = پول آن‌ها**؛ یعنی هر چقدر ما زمان و توجه بیشتری برای این نرم‌افزارها صرف کنیم، سودآوری این شرکت‌ها (که بر پایه‌ی تبلیغات هستند) بیشتر خواهد شد؛ به عبارت دیگر، میلیاردها دلار سرمایه‌گذاری شده تا آدم‌ها به دام فضای مجازی بیافتند و راه گریزی از آن نداشته باشند.
 
 تا اینجا به طور خلاصه فهمیدیم که شبکه‌های اجتماعی وقت زیادی از ما می‌گیرند، اما شاید بگویید که حتما بودنشان فایده‌هایی هم برای ما دارند؛ استدلال کارل نیوپورت در اینجا جالب است:
 
@@ -33,7 +33,8 @@ tags:
 
 اما راه‌حل چیست؟ کارل نیوپورت یک راه‌حل عملی به نام «پاکسازی دیجیتال» دارد:
 
-> فرآیند پاکسازی دیجیتال
+> **فرآیند پاکسازی دیجیتال**
+>
 > ١. یک دوره سی روزه را در نظر بگیرید و در استفاده از فناوری‌هایی که در زندگی‌تان ضروری نبوده و اختیاری هستند، تعطیلی موقتی ایجاد کنید.
 >
 > ۲. طی این وقفه‌ی سی روزه، فعالیت‌ها و رفتارهایی را که در شما حس رضایت ایجاد می‌کنند و برای‌تان معنا و مفهوم دارند، بررسی و کشف کنید.
