--- a/_posts/2020-12-01-داستان-فیلم-تنت-Tenet.md
+++ b/_posts/2020-12-01-داستان-فیلم-تنت-Tenet.md
@@ -18,7 +18,7 @@ tags:
 از آنجایی که من قبلا در وبلاگم فلوچارت [سریال آینه سیاه: بندراسنچ](http://asadiweb.ir/%D8%AE%D9%84%D8%A7%D8%B5%D9%87-%D9%86%D9%82%D8%AF-%D8%A2%DB%8C%D9%86%D9%87-%D8%B3%DB%8C%D8%A7%D9%87-%D8%A8%D9%86%D8%AF%D8%B1%D8%A7%D8%B3%D9%86%DA%86/) را درست کرده بودم، این بار قصد داشتم یک فلوچارت درباره داستان فیلم تنت به زبان انگلیسی پیدا کنم و آن را ترجمه کنم، اما اکثر فلوچارت‌ها هم چندان واضح نبودند. درنهایت این اینفوگرافی عالی را در سایت ردیت دیدم و گفتم که خوب است آن را با شما هم به اشتراک بگذارم: (برای بزرگتر دیده شدن تصویر روی آن کلیک کنید.) نوار صورتی رنگ روند حرکت عادی در زمان را نشان می‌دهد  و درمیانه‌ی داستان نوار آبی رنگ حرکت معکوس در زمان را نشان می‌دهد؛ کل داستان فیلم در چند روز (حرکت عادی در زمان و بازگشت در جهت معکوس در زمان) رخ می‌دهد.
 
 {:refdef: class="center"}
-[![اینفوگرافی فیلم تنت (Tenet 2020)](https://i.redd.it/sljeqyb80wl51.jpg "اینفوگرافی فیلم تنت (Tenet 2020)")](https://i.redd.it/sljeqyb80wl51.jpg)
+[![اینفوگرافی فیلم تنت (Tenet 2020)]({{ site.baseurl }}/images/tenet_2020.jpg "اینفوگرافی فیلم تنت (Tenet 2020)")]({{ site.baseurl }}/images/tenet_2020.jpg)
 {: refdef}
 
 
