--- a/_posts/2020-11-20-ماجرای-سگی-در-شب.md
+++ b/_posts/2020-11-20-ماجرای-سگی-در-شب.md
@@ -28,12 +28,18 @@ tags:
 
 اما نکات داستان که از نظر من مهم بوده‌اند شامل موارد زیر هستند:
 
-*   خواندن این کتاب می‌تواند شروعی برای تغییر ذهنیت ما از اوتیسم باشد، اکثر ما کثر ما از این اختلال جز اسم چیز دیگری نمی‌دانیم؛ اما مثلا از کتاب می‌توان فهمید که چرا افراد مبتلا به اوتیسم از جاهای شلوغ بدشان می‌آید؟ چون آنها به تمام جزئیات، بسیار توجه می‌کنند، یعنی تک تک جزئیات ظاهری و رفتار هر فرد را در ذهن خود بررسی می‌کنند و آن را به خاطر می‌سپارند و در یک جای شلوغ با آدم‌های زیاد، این کار وقت‌گیر و طاقت فرساست. درخصوص مکانهای جدید یا تغییر ترتیب وسایل هم همین قاعده برای آن‌ها برقرار است. یا درخصوص صحبت با افراد ناشناس، چون در افراد مبتلا به اوتیسم، مهارت‌های ارتباطی کامل رشد نکرده است، باعث می‌شود آن‌ها معانی تکه کلام‌ها و اصطلاحات را نفهمند (مثل آدم‌های عادی که در حال یادگیری یک زبان جدید هستند و اصطلاحات و تکه‌کلام‌های زبان جدید را متوجه نمی‌شوند) و قادر به درک زبان بدن طرف مقابل نباشند  این موارد باعث می‌شود ارتباط با آدم‌های جدید برای آن‌ها دلچسب نباشد.
-*   لحن و زبان داستان، عالی و باورپذیر است؛ نویسنده به گونه‌ای داسان را شرح می‌دهد که ما به عنوان خواننده فکر می‌کنیم واقعا داستان از زبان یک نوجوان مبتلا به اوتیسم شرح داده می‌شود. مثلا در جایی از داستان، کریستوفر در کتابش می‌نویسد که از استعاره‌ها که آدم‌های دیگر استفاده می‌کنند خوشش نمی‌آید؛ بعد در هرجایی از داستانش که از تشبیه استفاده می‌کند و پرانتز و پاورقی می‌گوید که از تشبیه استفاده کرده است (نه استعاره). موارد این‌چنینی در کتاب زیاد هستند و آنها به باورپذیری داستان کمک می‌کنند. 
-*   مورد دیگری که توجه مرا جلب کرد وجود تصاویر در صفحات کتاب است، اکثر رمان‌هایی که خوانده‌ام/دیده‌ام در متن داستان، تصویری نداشته‌اند، اما در این کتاب، تصاویر به گونه‌ی معناداری به داستان اضافه شده‌اند و به فهم بهتری ما در داستان کمک می‌کنند؛ انگار کریستوفر با کشیدن تصاویر سعی می‌کند آنچه را که فکر می‌کند، با ما (خواننده‌ی کتاب) در میان بگذارد.
-*   مسائل جالب ریاضی که در داستان مطرح شده‌اند، جذابیت آن را بیشتر کرده‌اند؛ برای مثال شماره‌گذاری فصل‌ها با اعداد اول، یا نوشتن از تجربیات و خاطرات کریستوفر که به ریاضی مربوط می‌شوند، یا پیوست کتاب که اثبات یک مسئله ریاضی است؛ یا وقتی که کریستوفر برای سرگرمی یا کم‌کردن استرس، اعداد را به توان می‌رساند و… . اینها را بگذارید کنار تجربه‌ی ما از ریاضی دوران مدرسه که یک درس سخت و دشوار را برای ما تداعی می‌کرد.
-*   نویسنده در نیمه‌ی ابتدایی داستان، با ایده‌های خوب (که در سطرهای بالاتر نوشته‌ام)، پرداخت داستانش را به خوبی انجام داده است و سطح انتظار ما (به عنوان خواننده) از داستان را بالا برده است، اما نیمه‌ی انتهایی داستان،‌ به صورتی شتاب‌زده مطرح می‌شود؛ به نظر می‌رسد که نویسنده سعی می‌کند داستانی که ساخته و پرداخته است را به سرعت به اتمام برساند و این از جذابیت داستان کاسته است. 
-*   به نظر من، سفر کریستوفر از سوئیندون به لندن، با سایر قسمت‌های کتاب هخوانی ندارد؛ کافی است ماجراهایی که کریستوفر با مادرش بیرون می‌رود را با این سفر مقایسه کنید؛ اینکه کرستوفر در مواجهه با تعداد زیادی آدم، در کف فروشگاه خوابیده و فریاد می‌کشد و عملا کار دیگری انجام نمی‌دهد تا به خانه برگردد، در مقایسه با عبور از زیرگذر پر از آدم در ایستگاه قطار یا ایستگاه پر سر و صدای مترو، کمی غیر منطقی به نظر می‌رسد؛ همچنین کریستوفر در این سفر بیش از حد خوش‌شانس است و این موارد به واقع‌گرایی داستان در بخش‌های انتهایی، کمی لطمه می‌زند.
-*   اگر داستان این کتاب از زاویه‌ی دید پدرِ کریستوفر تصور کنیم، با یک داستان به شدت ناراحت‌کننده طرف خواهیم بود؛ پدر کریستوفر فردی است که او را خیلی بیشتر از دیگران درک می‌کند و در مواجهه با رفتارهای او صبر و حوصله‌ی زیادی از خود نشان می‌دهد. به نوعی او زندگی‌اش را وقف نگهداری از فرزندش کرده است و رفتار کریستوفر بعد از اعتراف پدر به کشتن سگ، اگرچه از نظر کریستوفر منطقی است، اما از زاویه دید پدر بسیار دردآور است.
+-   خواندن این کتاب می‌تواند شروعی برای تغییر ذهنیت ما از اوتیسم باشد، اکثر ما کثر ما از این اختلال جز اسم چیز دیگری نمی‌دانیم؛ اما مثلا از کتاب می‌توان فهمید که چرا افراد مبتلا به اوتیسم از جاهای شلوغ بدشان می‌آید؟ چون آنها به تمام جزئیات، بسیار توجه می‌کنند، یعنی تک تک جزئیات ظاهری و رفتار هر فرد را در ذهن خود بررسی می‌کنند و آن را به خاطر می‌سپارند و در یک جای شلوغ با آدم‌های زیاد، این کار وقت‌گیر و طاقت فرساست. درخصوص مکانهای جدید یا تغییر ترتیب وسایل هم همین قاعده برای آن‌ها برقرار است. یا درخصوص صحبت با افراد ناشناس، چون در افراد مبتلا به اوتیسم، مهارت‌های ارتباطی کامل رشد نکرده است، باعث می‌شود آن‌ها معانی تکه کلام‌ها و اصطلاحات را نفهمند (مثل آدم‌های عادی که در حال یادگیری یک زبان جدید هستند و اصطلاحات و تکه‌کلام‌های زبان جدید را متوجه نمی‌شوند) و قادر به درک زبان بدن طرف مقابل نباشند  این موارد باعث می‌شود ارتباط با آدم‌های جدید برای آن‌ها دلچسب نباشد.
+
+-   لحن و زبان داستان، عالی و باورپذیر است؛ نویسنده به گونه‌ای داسان را شرح می‌دهد که ما به عنوان خواننده فکر می‌کنیم واقعا داستان از زبان یک نوجوان مبتلا به اوتیسم شرح داده می‌شود. مثلا در جایی از داستان، کریستوفر در کتابش می‌نویسد که از استعاره‌ها که آدم‌های دیگر استفاده می‌کنند خوشش نمی‌آید؛ بعد در هرجایی از داستانش که از تشبیه استفاده می‌کند و پرانتز و پاورقی می‌گوید که از تشبیه استفاده کرده است (نه استعاره). موارد این‌چنینی در کتاب زیاد هستند و آنها به باورپذیری داستان کمک می‌کنند. 
+
+-   مورد دیگری که توجه مرا جلب کرد وجود تصاویر در صفحات کتاب است، اکثر رمان‌هایی که خوانده‌ام/دیده‌ام در متن داستان، تصویری نداشته‌اند، اما در این کتاب، تصاویر به گونه‌ی معناداری به داستان اضافه شده‌اند و به فهم بهتری ما در داستان کمک می‌کنند؛ انگار کریستوفر با کشیدن تصاویر سعی می‌کند آنچه را که فکر می‌کند، با ما (خواننده‌ی کتاب) در میان بگذارد.
+
+-   مسائل جالب ریاضی که در داستان مطرح شده‌اند، جذابیت آن را بیشتر کرده‌اند؛ برای مثال شماره‌گذاری فصل‌ها با اعداد اول، یا نوشتن از تجربیات و خاطرات کریستوفر که به ریاضی مربوط می‌شوند، یا پیوست کتاب که اثبات یک مسئله ریاضی است؛ یا وقتی که کریستوفر برای سرگرمی یا کم‌کردن استرس، اعداد را به توان می‌رساند و… . اینها را بگذارید کنار تجربه‌ی ما از ریاضی دوران مدرسه که یک درس سخت و دشوار را برای ما تداعی می‌کرد.
+
+-   نویسنده در نیمه‌ی ابتدایی داستان، با ایده‌های خوب (که در سطرهای بالاتر نوشته‌ام)، پرداخت داستانش را به خوبی انجام داده است و سطح انتظار ما (به عنوان خواننده) از داستان را بالا برده است، اما نیمه‌ی انتهایی داستان،‌ به صورتی شتاب‌زده مطرح می‌شود؛ به نظر می‌رسد که نویسنده سعی می‌کند داستانی که ساخته و پرداخته است را به سرعت به اتمام برساند و این از جذابیت داستان کاسته است. 
+
+-   به نظر من، سفر کریستوفر از سوئیندون به لندن، با سایر قسمت‌های کتاب هخوانی ندارد؛ کافی است ماجراهایی که کریستوفر با مادرش بیرون می‌رود را با این سفر مقایسه کنید؛ اینکه کرستوفر در مواجهه با تعداد زیادی آدم، در کف فروشگاه خوابیده و فریاد می‌کشد و عملا کار دیگری انجام نمی‌دهد تا به خانه برگردد، در مقایسه با عبور از زیرگذر پر از آدم در ایستگاه قطار یا ایستگاه پر سر و صدای مترو، کمی غیر منطقی به نظر می‌رسد؛ همچنین کریستوفر در این سفر بیش از حد خوش‌شانس است و این موارد به واقع‌گرایی داستان در بخش‌های انتهایی، کمی لطمه می‌زند.
+
+-   اگر داستان این کتاب از زاویه‌ی دید پدرِ کریستوفر تصور کنیم، با یک داستان به شدت ناراحت‌کننده طرف خواهیم بود؛ پدر کریستوفر فردی است که او را خیلی بیشتر از دیگران درک می‌کند و در مواجهه با رفتارهای او صبر و حوصله‌ی زیادی از خود نشان می‌دهد. به نوعی او زندگی‌اش را وقف نگهداری از فرزندش کرده است و رفتار کریستوفر بعد از اعتراف پدر به کشتن سگ، اگرچه از نظر کریستوفر منطقی است، اما از زاویه دید پدر بسیار دردآور است.
 
 آیا شما نیز رمان حادثه‌ای عجیب برای سگی در شب را خوانده‌اید؟ پس نظرتان درباره‌ی این کتاب را در قسمت نظرات بنویسید!
