--- a/_posts/2021-01-05-مرورگر-اندروید.md
+++ b/_posts/2021-01-05-مرورگر-اندروید.md
@@ -10,8 +10,14 @@ tags:
 - معرفی-نرم‌افزار
 ---
   
-  
-اگر نوشته‌های قبلی مرا خوانده باشید می‌دانید که انتخاب من برای وبگردی روزانه مرورگر فایرفاکس است و در نوشته‌ای جداگانه دلایل مزیت فایرفاکس و همچنین نحوه‌ی [مهاجرت از کروم به فایرفاکس](http://asadiweb.ir/%D9%85%D9%87%D8%A7%D8%AC%D8%B1%D8%AA-%DA%A9%D8%B1%D9%88%D9%85-%D9%81%D8%A7%DB%8C%D8%B1%D9%81%D8%A7%DA%A9%D8%B3/){:target="_blank"} را نوشته‌ام. اما درخصوص سیستم‌عامل اندروید قصیه کمی متفاوت است، از آنجایی که فایرفاکس برمبنای موتور Gecko توسعه داده شده است و از WebView که به صورت پیش‌فرض در اندروید 5 به بالا نصب است استفاده نمی‌کند؛ به همین دلیل حجم فایل apk فایرفاکس بیشتر از 60 مگابایت است و حجم آن پس از نصب به مراتب بیشتر خواهد بود و این حجم بالا زیاد مطلوب نیست. همچنین چون من در وبگردی در اندروید، نیازی به لاگین بودن در حساب‌ها و sync بودن اطلاعات ندارم، پس به دنبال یک مرورگر سریع، سبک و کم‌حجم برای اندروید بودم، چندین مرورگر ازجمله Via Browser و Firefox Focus و DuckDuckGo Privacy Browser را تست کرده‌ام و درنهایت نظرم به مرورگر کم‌حجم و متن‌باز jelly  جلب شد. نسخه‌ی بهبود یافته‌ای از این مرورگر به اسم  [jQuarks](https://f-droid.org/en/packages/com.oF2pks.jquarks/){:target="_blank" rel="nofollow"} وجود دارد. من کد منبع این مرورگر را دانلود کردم و پس از چند شخصی‌سازی کوچک (تغییر آیکون، تغییر user-agent و حذف چند آیتم از منو) آن را buid کردم و نتیجه چیزی شبیه تصویر زیر شد.
+اگر نوشته‌های قبلی مرا خوانده باشید می‌دانید که انتخاب من برای وبگردی روزانه مرورگر فایرفاکس است و در نوشته‌ای جداگانه دلایل مزیت فایرفاکس و همچنین نحوه‌ی [مهاجرت از کروم به فایرفاکس](http://asadiweb.ir/%D9%85%D9%87%D8%A7%D8%AC%D8%B1%D8%AA-%DA%A9%D8%B1%D9%88%D9%85-%D9%81%D8%A7%DB%8C%D8%B1%D9%81%D8%A7%DA%A9%D8%B3/){:target="_blank"} را نوشته‌ام. اما درخصوص سیستم‌عامل اندروید قصیه کمی متفاوت است، اگر وقت/حوصله خواندن ادامه مطلب را ندارید، فایل را از سطر بعد دانلود کنید.
+
+**[دانلود مرورگر کم حجم برای اندروید](https://github.com/asadise/android_browser/releases/download/v1.0-10/browser-v1.0-10.apk){:target="_blank"} - 5 مگابایت (+android 6)**
+
+
+
+
+از آنجایی که فایرفاکس برمبنای موتور Gecko توسعه داده شده است و از WebView که به صورت پیش‌فرض در اندروید 5 به بالا نصب است استفاده نمی‌کند؛ به همین دلیل حجم فایل apk فایرفاکس بیشتر از 60 مگابایت است و حجم آن پس از نصب به مراتب بیشتر خواهد بود و این حجم بالا زیاد مطلوب نیست. همچنین چون من در وبگردی در اندروید، نیازی به لاگین بودن در حساب‌ها و sync بودن اطلاعات ندارم، پس به دنبال یک مرورگر سریع، سبک و کم‌حجم برای اندروید بودم، چندین مرورگر ازجمله Via Browser و Firefox Focus و DuckDuckGo Privacy Browser را تست کرده‌ام و درنهایت نظرم به مرورگر کم‌حجم و متن‌باز jelly  جلب شد. نسخه‌ی بهبود یافته‌ای از این مرورگر به اسم  [jQuarks](https://f-droid.org/en/packages/com.oF2pks.jquarks/){:target="_blank" rel="nofollow"} وجود دارد. من کد منبع این مرورگر را دانلود کردم و پس از چند شخصی‌سازی کوچک (تغییر آیکون، تغییر user-agent و حذف چند آیتم از منو) آن را buid کردم و نتیجه چیزی شبیه تصویر زیر شد.
 
 {:refdef: class="center"}
 ![مرورگر کم حجم اندروید]({{ site.baseurl }}/images/jelly-browser.jpg "مرورگر کم حجم اندروید")
