--- a/_posts/2021-03-21-اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی.md
+++ b/_posts/2021-03-21-اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی.md
@@ -18,7 +18,7 @@ tags:
 اکثر گوشی‌های اندرویدی یک برنامه تقویم به صورت پیش‌فرض روی خود نصب دارند  و به دلیل اینکه این نرم‌افزار فقط تاریخ میلادی دارد، برای ما ایرانیان (که تقویم رسمی کشورمان تقویم هجری خورشیدی است) کاربردی نبوده و اکثر افراد در کنار این نرم‌افزار،  یک تقویم شمسی هم در گوشی خود نصب می‌کنند. اما می‌توان تقویم هجری شمسی را به تقویم پیش‌فرض گوشی اندرویدی اضافه کرد.
 
 برای اضافه کردن تقویم شمسی به تقویم گوگل مراحل زیر را دنبال کنید:
-- از آنجایی که این تقویم را در پنج نسخه تهیه کرده‌ام؛ ابتدا بر روی هر کدام از نسخه‌ها که فکر می‌کنید برای شما مناسب است کلیک کنید:
+- از آنجایی که این تقویم را در نسخه‌های مختلف زیر تهیه کرده‌ام؛ ابتدا بر روی هر کدام از نسخه‌ها که فکر می‌کنید برای شما مناسب است کلیک کنید:
 
 **[تقویم کامل سال ۱۴۰۰ (شامل روز هفته، روز، ماه و سال)](https://calendar.google.com/calendar/embed?src=md50skv44fbqu866o09mq8pg8o%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**، مثال: جمعه ۱ فروردین ۱۴۰۰
 
