--- a/_posts/2021-03-21-اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی.md
+++ b/_posts/2021-03-21-اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی.md
@@ -20,9 +20,9 @@ tags:
 برای اضافه کردن تقویم شمسی به تقویم گوگل مراحل زیر را دنبال کنید:
 - از آنجایی که این تقویم را در نسخه‌های مختلف زیر تهیه کرده‌ام؛ ابتدا بر روی هر کدام از نسخه‌ها که فکر می‌کنید برای شما مناسب است کلیک کنید:
 
-**[تقویم کامل سال ۱۴۰۰ (شامل روز هفته، روز، ماه و سال)](https://calendar.google.com/calendar/embed?src=md50skv44fbqu866o09mq8pg8o%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**، مثال: جمعه ۱ فروردین ۱۴۰۰
+**[تقویم کامل سال ۱۴۰۰ (شامل روز هفته، روز، ماه و سال)](https://calendar.google.com/calendar/embed?src=md50skv44fbqu866o09mq8pg8o%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**، مثال: یک‌شنبه ۱ فروردین ۱۴۰۰
 
-**[تقویم سال ۱۴۰۰ (شامل روز هفته، روز و ماه)](https://calendar.google.com/calendar/embed?src=lcsm8abm492ko4dg338a4oc7l8%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**، مثال: جمعه ۱ فروردین
+**[تقویم سال ۱۴۰۰ (شامل روز هفته، روز و ماه)](https://calendar.google.com/calendar/embed?src=lcsm8abm492ko4dg338a4oc7l8%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**، مثال: یک‌شنبه ۱ فروردین
 
 **[تقویم کوتاه سال ۱۴۰۰ (روز و ماه)](https://calendar.google.com/calendar/embed?src=rjj0quq417mintene553gm7338%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**، مثال: ۱ فروردین
 
@@ -37,6 +37,9 @@ tags:
 **[تقویم کوتاه سال 1400 (روز و ماه به صورت عدد انگلیسی)](https://calendar.google.com/calendar/embed?src=jqge4so15i6jiqthgdvnqfdkuk%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**، مثال: 1/1
 
 **[تقویم کوتاه سال 1400 (روز به صورت عدد انگلیسی)](https://calendar.google.com/calendar/embed?src=5emcgreq6evt9q2p6urom0kb6c%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**، مثال: 1
+
+**[تقویم سال 1400 (روز و ماه به صورت عدد و حروف انگلیسی)](https://calendar.google.com/calendar/embed?src=erlstbbohag32077fe2c5f3u7g%40group.calendar.google.com&ctz=Asia%2FTehran){:target="_blank"}**، مثال: Yek-shanbeh 1 Farvardin
+
 
 - حال در پنجره‌ای که باز می‌شود روی گزینه‌ی ![add to Google Calendar]({{ site.baseurl }}/images/add-to-google-calendar.jpg "add to Google Calendar") کلیک کنید تا این تقویم به لیست تقویم‌های شما اضافه شود.‌
 
