--- a/_posts/2021-05-20-شلوارهای-وصله‌دار-رسول-پرویزی.md
+++ b/_posts/2021-05-20-شلوارهای-وصله‌دار-رسول-پرویزی.md
@@ -11,24 +11,24 @@ tags:
 - معرفی-کتاب
 ---
 
-کتاب شلوارهای وصله‌دار نوشته‌ی رسول پرویزی است که اولین بار در سال ۱۳۳۶ منتشر شده است. این کتاب شامل داستان‌های کوتاهی است که از قصه‌های عامیانه تا خاطرات رسول پرویزی را شامل می‌شود. پس از چاپ سوم (۱۳۴۵) تعداد داستان‌های کتاب به ۲۰ مورد رسیده است. سبک داستانی‌اش پرویزی شبیه سبک جمال‌زاده بوده و داستان‌های کوتاهش، لحنی نزدیک به فرهنگ عامه و دلنشین دارد. پرویزی به خاطر ورود به سیاست، نوشتن را ادامه نداد و آثارش به دو مجموعه داستان خلاصه می‌شود.
+کتاب شلوارهای وصله‌دار نوشته‌ی رسول پرویزی است که اولین بار در سال ۱۳۳۶ منتشر شده است. این کتاب شامل داستان‌های کوتاهی است که از قصه‌های عامیانه تا خاطرات رسول پرویزی را شامل می‌شود. پس از چاپ سوم (۱۳۴۵) تعداد داستان‌های کتاب به ۲۰ مورد رسیده است. سبک داستانی پرویزی، شبیه سبک جمال‌زاده بوده و لحنی نزدیک به فرهنگ عامه و دلنشین دارد. پرویزی به خاطر ورود به سیاست، نوشتن را ادامه نداد و آثارش به دو مجموعه داستان خلاصه می‌شود.
 
 
  
 
 معروف‌ترین داستان این کتاب، «قصه‌ی عینکم» است که در کتاب ادبیات فارسی دوم دبیرستان آورده شده است و همین داستان، زمینه‌ی آشنایی مرا با کتاب «شلوارهای وصله‌دار» فراهم کرده است و باعث شد که سال‌ها پس از دوران دبیرستان، این کتاب را بخوانم. گویش نویسنده در این کتاب، بی‌تکلف و ساده است و به نظر من لذت خواندن داستانهای کوتاه این کتاب را دوچندان می‌کند.
 
-بیشتر داستان‌های کتاب شامل خاطرات (کودکی تا جوانی) پرویزی و یا خاطرات دوستان اوست. تمام داستان‌های کوتاه این کتاب و وابستگی داستانی با یکدیگر ندارند و هرکدام به صورت داستانی مستقل هستند؛ این ویژگی، خواندن کتاب به صورت گزینشی و غیرپیوسته هم امکان‌پذیر می‌کند. از میان داستان‌های کتاب، داستانهای «درویش باباکوهی آرام مرد» و «در هفت روز هفته» به عقیده من ارزشی دوچندان دارند؛ چرا که در خلال این دو داستان، نویسنده به دغدغه‌های موجود در جامعه‌ی آن روزگار (بیش از نیم قرن پیش) اشاره می‌کند و مسائل و مشکلاتی را بیان می‌کند که هنوز هم در جامعه‌ی ما وجود دارند. برای مثال در داستان «درویش باباکوهی آرام مرد، نویسنده با شرح داستان زندگی یک درویش،‌ ماتریالیست شدن جامعه را مورد انتقاد قرار می‌دهد، این که هدف‌های والا از جامعه رخت بربسته‌اند و بدست آوردن ثروت و مقام، به هر صورتی به هدف اکثریت تبدیل شده است؛ جامعه‌ای سطحی که فقط به پول فکر می‌کند.
+تمام داستان‌های این کتاب، وابستگی داستانی با یکدیگر ندارند و هرکدام به صورت داستانی مستقل هستند؛ این ویژگی، خواندن کتاب به صورت گزینشی و غیرپیوسته هم امکان‌پذیر می‌کند. از میان داستان‌های کتاب، داستان‌های «درویش باباکوهی آرام مرد» و «در هفت روز هفته» به عقیده من ارزشی دوچندان دارند؛ چرا که در خلال این دو داستان، نویسنده به دغدغه‌های موجود در جامعه‌ی آن روزگار (بیش از نیم قرن پیش) اشاره می‌کند و مسائل و مشکلاتی را بیان می‌کند که هنوز هم در جامعه‌ی ما وجود دارند. برای مثال در داستان «درویش باباکوهی آرام مرد» نویسنده با شرح داستان زندگی یک درویش،‌ ماتریالیست شدن جامعه را مورد انتقاد قرار می‌دهد؛ این که هدف‌های والا از جامعه رخت بربسته‌اند و بدست آوردن ثروت و مقام -به هر صورتی- به هدف اکثریت جامعه تبدیل شده است؛ جامعه‌ای سطحی که فقط به پول فکر می‌کند.
 
 {:refdef: class="center"}
 ![کتاب شلوارهای وصله‌دار نوشته‌ی رسول پرویزی]({{ site.baseurl }}/images/shalvarhaye-vasledar.jpg "کتاب شلوارهای وصله‌دار نوشته‌ی رسول پرویزی")
 {: refdef}
 
-در داستان «در هفت روز هفته» نیز دغدغه‌های مهمی مطرح می‌شود. برای مثال زندگی یکنواخت کارمندی و شباهتش به دوران مدرسه گوشزد می‌شود، گویی تمام هدف سیستم آموزشی و همچنین نظام اجتماعی، تربیت کارگران و کارمندان مطیعی است که یک چارچوب معین و یک سیکل روتین را در تمام سال‌های زندگی‌شات تکرار کند و بدون هیچ خلاقیت، آفرینش و حرف تازه‌ای سرانجام بمیرد. رذالت اخلاقی دیگر که در این داستان به آن پرداخته می‌شود «ریا» است؛ اینکه تظاهر، چاپلوسی و ریا، بر تمام ارتباط‌های اجتماعی سایه افکنده است و مراوده‌ای بدون آن انجام نمی‌شود. در داستان «در هفت روز هفته» که درواقع خاطره‌ای از یک هفته‌ی کاری نویسنده است، تمام افرادی که برای انجام کارشان به نزد او می‌روند، همگی این طور وانمود می‌کنند که از دوری او رنجه شده‌اند و برای تازه کردن دیدار، نزد وی آمده‌اند؛ ولی در بین راه، یادشان آمده که کار کوچکی هم داشته‌اند… اگر شما هم این داستان کوتاه را بخوانید احتمالا به این نتیجه می‌رسید که این «ریا» که در رنگ و لعاب «ادب» هر روز می‌بینیم و مورد استفاده قرار می‌دهیم،‌ قدمتی طولانی در این مرز و بوم دارد. 
+در داستان «در هفت روز هفته» نیز دغدغه‌های مهمی مطرح می‌شود. برای مثال زندگی یکنواخت کارمندی و شباهتش به دوران مدرسه گوشزد می‌شود، گویی تمام هدف سیستم آموزشی و همچنین نظام اجتماعی، تربیت کارگران و کارمندان مطیعی است که یک چارچوب معین و یک سیکل روتین را در تمام سال‌های زندگی‌شان تکرار کند و بدون هیچ خلاقیت، آفرینش و حرف تازه‌ای، سرانجام بمیرد. رذالت اخلاقی دیگر که در این داستان به آن پرداخته می‌شود «ریا» است؛ اینکه تظاهر، چاپلوسی و ریا، بر تمام ارتباط‌های اجتماعی سایه افکنده است و مراوده‌ای بدون آن انجام نمی‌شود. در داستان «در هفت روز هفته» که درواقع خاطره‌ای از یک هفته‌ی کاری نویسنده است، تمام افرادی که برای انجام کارشان به نزد وی می‌روند، همگی این طور وانمود می‌کنند که از دوری او رنجه شده‌اند و برای تازه کردن دیدار، نزد وی آمده‌اند؛ ولی در بین راه، یادشان آمده که کار کوچکی هم داشته‌اند… اگر شما هم این داستان کوتاه را بخوانید احتمالا به این نتیجه می‌رسید که این «ریا» که در رنگ و لعاب «ادب» هر روز می‌بینیم و مورد استفاده قرار می‌دهیم،‌ قدمتی طولانی در این مرز و بوم دارد. 
 
 
-به نظر من، تمام داستان‌های کوتاه این کتاب، ارزش خواندن را دارند و برخی از آن‌ها ارزش چندبار خواندن؛ اکثر داستان‌ها، خاطرات یا شنیده‌های نویسنده هستند که در تنگستان بوشهر (زادگاه نویسنده) یا شهر شیراز رخ داده‌اند و پرویزی با لحنی آمیخته به طنز، باورپذیر و بی‌تکلف آن‌ها را قلم زده است. نویسنده همانطور که ویژگی‌های مثبت مردم و اجتماع توصیف نموده است، به نقد رفتارها و رسوم غلط نیز پرداخته است. یکی از داستان‌های کوتاه این کتاب «شیرمحمد» نام دارد که داستان آن واقعی بوده و وجه مشترکی با رمان تنگسیر نوشته‌ی صادق چوبک دارد. 
-در خاتمه برای پرهیز از طولانی شدن این نوشته،‌ تنها عناوین داستان‌های کتاب شلوارهای وصله‌دار را فهرست می‌کنم، شاید عنوانی به نظرتان زیبا آمد و تصمیم به خواندن آن گرفتید: زار صَفر، قصه عینکم، پالتو حنائیم، شیرمحمد، ابراهیم، زبان کوچک پدرم، گرگعلی خان، زنگ انشاء، شلوارهای وصله دار، من بدنیا آمدم، ای واویلا، تقویم عوضی، سه یار دبستانی، عوضی نگیرید، مرگ رسول شله، درویش باباکوهی آرام مرد، زرگر مظلوم، بوالفضول، در هفت روز هفته، دوپشته بر الاغ.
+به نظر من، تمام داستان‌های کوتاه این کتاب، ارزش خواندن را دارند و برخی از آن‌ها ارزش چندبار خواندن؛ اکثر داستان‌ها، خاطرات کودکی تا جوانی نویسنده یا شنیده‌های او هستند که در تنگستان بوشهر (زادگاه نویسنده) یا شهر شیراز رخ داده‌اند و پرویزی با لحنی آمیخته به طنز، باورپذیر و بی‌تکلف آن‌ها را قلم زده است. نویسنده همانطور که ویژگی‌های مثبت مردم و اجتماع توصیف نموده است، به نقد رفتارها و رسوم غلط نیز پرداخته است. یکی از داستان‌های کوتاه این کتاب «شیرمحمد» نام دارد که براساس رخ‌دادی وقعی است و وجه مشترکی با رمان تنگسیر نوشته‌ی صادق چوبک دارد. 
+در خاتمه برای پرهیز از طولانی شدن این نوشته،‌ تنها عناوین داستان‌های کتاب شلوارهای وصله‌دار را فهرست می‌کنم، شاید عنوانی به نظرتان زیبا آمد و تصمیم به خواندنش گرفتید: زار صَفر، قصه عینکم، پالتو حنائیم، شیرمحمد، ابراهیم، زبان کوچک پدرم، گرگعلی خان، زنگ انشاء، شلوارهای وصله دار، من بدنیا آمدم، ای واویلا، تقویم عوضی، سه یار دبستانی، عوضی نگیرید، مرگ رسول شله، درویش باباکوهی آرام مرد، زرگر مظلوم، بوالفضول، در هفت روز هفته، دوپشته بر الاغ.
 
 
 آیا شما نیز  شلوارهای وصله‌دار نوشته‌ی رسول پرویزی را خوانده‌اید؟ پس نظرتان درباره‌ی این کتاب را در قسمت نظرات بنویسید!
