--- a/_posts/2021-06-17-250-فیلم-برتر-IMDb.md
+++ b/_posts/2021-06-17-250-فیلم-برتر-IMDb.md
@@ -1,10 +1,8 @@
 ---
 layout: post
-title: 250 فیلم برتر IMDb: تجربه‌ی من
+title: "250 فیلم برتر IMDb: تجربه‌ی من"
 author: مرتضی اسدی
 tags:
-
-
 - برترین فیلم های تاریخ سینما (IMDB)
 - لیست-250-فیلم-برتر-imdb-به-ترتیب
 - معرفی-فیلم
