--- a/_posts/2021-06-17-فیلم‌های-برتر-IMDb.md
+++ b/_posts/2021-06-17-فیلم‌های-برتر-IMDb.md
@@ -13,35 +13,32 @@ tags:
 
 
 
-سایت IMDb یک وبگاه است که اطلاعات مرتبط با فیلم‌های سینمایی، برنامه‌های تلویزیونی و... را شامل می‌شود. شرکت آمازون در سال ۱۹۹۸ این وبگاه را خرید. این سایت در مورد فیلم‌ها، اطلاعات زیادی از جمله اشکالات، حواشی و آرای کاربران ارائه می‌دهد. همچنین یکی دیگر از خدمات این سایت، امتیازدهی کاربران سایت به فیلم‌هاست که عددی بین ۱ تا ۱۰ را شامل می‌شود. یکی از لیست‌های مشهور IMBb، فهرست ۲۵۰ فیلم برتر تاریخ است که با فرمولی امتیاز مربوط به فیلم را محاسبه می‌کند. برای اینکه فیلمی بتواند در این لیست قرار بگیرد، باید حداقل ۲۵۰۰۰ کاربر به آن امتیاز بدهند.
+سایت IMDb یک وبگاه است که اطلاعات مرتبط با فیلم‌های سینمایی، برنامه‌های تلویزیونی و… را شامل می‌شود. شرکت آمازون در سال ۱۹۹۸ این وبگاه را خرید. این سایت در مورد فیلم‌ها، اطلاعات زیادی از جمله اشکالات، حواشی و آرای کاربران ارائه می‌دهد. همچنین یکی دیگر از خدمات این سایت، امتیازدهی کاربران سایت به فیلم‌هاست که عددی بین ۱ تا ۱۰ را شامل می‌شود. یکی از لیست‌های مشهور IMBb، فهرست ۲۵۰ فیلم برتر تاریخ است که با فرمولی امتیاز مربوط به فیلم را محاسبه می‌کند. برای اینکه فیلمی بتواند در این لیست قرار بگیرد، باید حداقل ۲۵۰۰۰ کاربر به آن امتیاز بدهند.
 
 
-**از کجا 250 فیلمبرتر IMDb را دانلود کنیم؟**
-
+**از کجا 250 فیلم برتر IMDb را دانلود کنیم؟**\
 از آنجایی که اکثر فیلم‌های این لیست جزء فیلم‌های مشهور هستند، در سایت‌های دانلود فیلم ایرانی یافت می‌شوند؛ من اکثر فیلم‌ها را از سایت‌هایی ایرانی دانلود کردم، چند فیلمی هم وجود داشت که به صورت رایگان در دسترس نبود که برای دانلود آن‌ها دست به دامان تورنت (Torrent) شدم. همانطور که خودتان می‌دانید اکثر نسخه‌های دوبله شده، دارای سانسور هستند و معمولا فیلم‌هایی که از تورنت دانلود می‌شود زبان اصلی بوده و برای دیدنشان به زیرنویس فارسی نیاز دارید.
 
 {:refdef: class="center"}
 ![۲۵۰ فیلم برتر IMDb]({{ site.baseurl }}/images/imdb-top-chart.jpg "۲۵۰ فیلم برتر IMDb")
 {: refdef}
 
-**بهترین کارگردانان لیست (از نظر من)**
-
-در لیست 250 فیلم برتر IMDb کارگردانان مشهوری وجود دارند که بسیار محبوب هستند و موفقیت‌های تجاری زیادی هم کسب کرده‌اند. اما من چند کارگردان در این لیست دیدم که به عقیده‌ی من برای ساخت فیلم، هدفی به جز اهداف تجاری داشته‌اند و این هدف‌های انسانی ارزش کار آن‌ها را چند برابر کرده است، لیستاین کارگردان‌ها را در ادامه می‌آورم:
+**بهترین کارگردانان لیست (از نظر من)**\
+در لیست 250 فیلم برتر IMDb کارگردانان مشهوری وجود دارند که بسیار محبوب هستند و موفقیت‌های تجاری زیادی هم کسب کرده‌اند. اما من چند کارگردان در این لیست دیدم که به عقیده‌ی من برای ساخت فیلم، هدفی به جز اهداف تجاری داشته‌اند و این هدف‌های انسانی، ارزش کار آن‌ها را چند برابر کرده است. لیست این کارگردان‌ها را در ادامه می‌آورم:
 
 - **آکیرا کوروساوا**: کوروساوا کارگردانی ژاپنی است که در طول زندگی حرفه‌ای ۵۷ ساله‌اش، ۳۰ فیلم ساخت. او از مهم‌ترین و تأثیرگذارترین فیلم‌سازان تاریخ سینما شناخته می‌شود. فیلم‌های راشومون (۱۹۵۰)، هفت سامورایی (۱۹۵۴)، یوجیمبو (۱۹۶۱)، بهشت و دوزخ (۱۹۶۳) و آشوب (۱۹۸۵) از این کارگردان در لیست ۲۵۰ فیلم برتر IMDb هستند. این ۵ فیلم به نظر من بسیار دیدنی هستند، به شخصه فیلم راشومون و روایت پیچیده و چندلایه‌ی آن را بسیار دوست داشتم. 
 
 - **اینگمار برگمان**: برگمان کارگردان مشهور سوئدی است که در طول دوران حرفه‌ایِ خود ۶۲ فیلم ساخت و بیش از ۱۷۰ نمایش را کارگردانی کرد. او فیلمساز باشهامتی بود و ایده‌هایی ناب داشت. فیلم‌های مهر هفتم (۱۹۵۷)، توت فرنگی‌های وحشی (۱۹۵۷)، پرسونا (۱۹۶۶)، سونات پاییزی (۱۹۷۸) و فانی و الکساندر (۱۹۸۰) از این کارگردان در لیست ۲۵۰ فیلم برتر IMDb حضور دارند؛ اکثر فیلم‌های برگمان داستانی عمیق و استعاری دارند که دیدن چندباره‌ی آن‌ها و خواندن نقد و نظرات منتقدان، به فهم بیشتر داستان کمک می‌کند. شاهد این مدعا، فیلم پرسونا است که اهالی سینما هر کس که ادعای منتقد بودن می‌کند را به نقد این فیلم دعوت می‌کنند.
 
-- **اُزو یاسوجیرو**: یاسوجیرو کارگردانی ژاپنی است که در طی دوران حرفه‌‌ای خود ۵۳ فیم ساخته است. فیلم‌های داستان توکیو (۱۹۵۳) و اواخر بهار (۱۹۴۹) از این کارگردان در لیست ۲۵۰ فیلم برتر IMDb هستند. مفاهیمی همچون گذرعمر، زندگی و مرگ و خانواده در فیلم‌های یاسوجیرو به چشم می‌خورد، فیلم‌های او ساده و شاعرانه هستند.
+- **اُزو یاسوجیرو**: یاسوجیرو کارگردانی ژاپنی است که در طی دوران حرفه‌‌ای خود ۵۳ فیلم ساخته است. فیلم‌های داستان توکیو (۱۹۵۳) و اواخر بهار (۱۹۴۹) از این کارگردان در لیست ۲۵۰ فیلم برتر IMDb هستند. مفاهیمی همچون گذر عمر، زندگی و مرگ و خانواده در فیلم‌های یاسوجیرو به چشم می‌خورد، فیلم‌های او ساده و شاعرانه هستند.
 
 - **ریچارد لینکلیتر**: لینکلیتر کارگردان آمریکایی است که تاکنون حدودا ۲۲ فیلم کارگردانی کرده است. سه‌گانه‌ی «پیش از» او که شامل سه فیلم پیش از طلوع (۱۹۹۵)، پیش از غروب (۲۰۰۴) و پیش از نیمه‌شب (۲۰۱۳) از جمله فیلم‌های معروف او هستند. که دو تای اول در لیست ۲۵۰ فیلم برتر IMDb حضور دارند. همچنین فیلم پسرانگی (۲۰۱۴) یک ایده‌ی بسیار جالب و بلندپروازانه دارد: این فیلم در طول ۱۲ سال (۲۰۱۳-۲۰۰۲) ساخته شده است و ۱۲ سال از عمر یک پسربچه و خانواده‌اش، از دوران دبستان تا رسیدن به سن بلوغ را دنبال می‌کند.
 
 - **ساتیاجیت رای**: عموم فیلم‌های هندی عناصر یکسانی دارند؛ بزن بزن، رقص و آواز، سکانس‌های عجیب و غیر واقعی. اما ساتیاجیت رای یکی از  کارگردان‌های هندی است که از این قاعده پیروی نکرده است، او در طول عمر حرفه‌ای خود  ۳۶ فیلم ساخت که سه‌گانه‌ی او: پاترپانچالی (۱۹۵۵)، آپاراجیتو (۱۹۵۶) دنیای آپو (۱۹۵۹) دارای شهرت جهانی هستند. ساتیاجیت رای خود را تحت تأثیر رابیندرانات تاگور، شاعر و فیلسوف هندی می‌دانست. 
 
-اگر بخواهم این لیست را ادامه بدهم، نام کارگردانان بزرگ دیگری همچون **چارلی چاپلین**، **آلفرد هیچکاک**، **استنلی کوبریک**، **هایائو میازاکی**، **بیلی وایلدر**، **کریستوفر نولان** را نیز در این لیست بیاورم، اما قصد من شرحی مختصر از چند کارگردان بود که به مفاهیم والایی همچون زندگی، مرگ، گذر عمر، خانواده، عشق و ... پرداخته‌اند و اولویت‌های تجاری و مشخصا پول نزدشان اهمیت کمتری داشته است. 
+اگر بخواهم این لیست را ادامه بدهم، نام کارگردانان بزرگ دیگری همچون **چارلی چاپلین**، **آلفرد هیچکاک**، **استنلی کوبریک**، **هایائو میازاکی**، **بیلی وایلدر**، **کریستوفر نولان** را نیز در این لیست بیاورم، اما قصد من شرحی مختصر از چند کارگردان بود که به مفاهیم والایی همچون زندگی، مرگ، گذر عمر، خانواده، عشق و… پرداخته‌اند و اولویت‌های تجاری و مشخصا پول نزدشان اهمیت کمتری داشته است. 
 
-**IMDb تنها نیست!**
-
+**IMDb تنها نیست!**\
 برخی می‌گویند از آنجایی که رتبه‌بندی IMDb مبتنی بر امتیاز کاربران است، امکان سوءگیری و امتیازدهی‌های غیر واقعی در آن وجود دارد. البته IMDb تنها سایت امتیازدهی مشهور نیست و سایت‌های دیگری نیز وجود دارند، یکی از معروف‌ترین آن‌ها وبگاه راتن تومیتوز (گوجه‌فرنگی‌های گندیده) است که در آن تنها منتقدان امکان نوشتن نقد و امتیازدهی به فیلم‌ها را دارند. همچنین متاکریتیک یکی دیگر از سایت‌های معروف امتیازدهی فیلم‌هاست، در این سایت برای هر فیلم میان نظرات و نمرات منتقدین مختلف میانگین وزن‌دار گرفته می‌شود و نمره‌ای به آن تعلق می‌گیرد. اگر از علاقمندان نرم‌افزارهای آزاد هستید هم سایت TMDb به آدرس [Themoviedb.org](https://www.themoviedb.org){:rel="nofollow"} معادلی آزاد برای IMBb است که وبگاهی انحصاری نیست و  علاوه بر داشتن ویژگی‌های دنیای آزاد، امتیاز نمایش داده شده نیز در آن واقعی‌تر است.
 
 
